<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedule Builder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="max_time_hint">Maximum time for a task?</string>
    <string name="minutes">minutes</string>
    <string name="break_hint">How long for a break?</string>
    <string name="task_hint">What task?</string>
    <string name="task_time">How long? (minutes)</string>
    <string name="start_time">hh:mm</string>
    <string name="priority">Priority</string>
    <string name="priority_hint">1(lowest) - 10(highest)</string>
    <string name="priority_high">High</string>
    <string name="priority_mid">Mid</string>
    <string name="priority_low">Low</string>
    <string name="no_break">No break</string>
    <string name="add_a_task">Add Task</string>
    <string name="add_tasks">Add tasks</string>
    <string name="timer_set">Set timer</string>
    <string name="build_schedule">Build Schedule</string>

</resources>
