<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText android:id="@+id/taskName"
        android:hint="@string/task_hint"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <EditText android:id="@+id/taskTime"
        android:hint="@string/task_time"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:layout_below="@id/taskName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView android:id="@+id/taskPriority"
        android:hint="@string/priority"
        android:paddingTop="10dp"
        android:layout_below="@id/taskTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <RadioGroup android:id="@+id/priorityRadio"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskPriority"
        >
        <RadioButton android:id="@+id/pr_radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"
            android:checked="true"/>

        <RadioButton android:id="@+id/pr_radio_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_mid"/>

        <RadioButton android:id="@+id/pr_radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"/>
    </RadioGroup>

    <CheckBox android:id="@+id/noBreak"
        android:hint="@string/no_break"
        android:layout_below="@id/priorityRadio"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/addTask"
        android:hint="@string/add_a_task"
        android:layout_below="@id/noBreak"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sortTasks" />

    <Button android:id="@+id/buildSchedule"
        android:hint="@string/build_schedule"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
